--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>dshsahdsa</h1>
+    <div class="container">
+        <div class="div">
+            <input type="text">
+            <button>Find</button>
+        </div>
+        <div class="weather-info">
+            <h2 id="location"></h2>
+            <p id="location-weather"></p>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
