--- a/index.html
+++ b/index.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Weather App</title>
 </head>
 <body>
     <div class="container">
-        <div class="div">
-            <input type="text">
-            <button>Find</button>
+        <div class="header">
+            <h1>Weather API App</h1>
         </div>
-        <div class="weather-info">
-            <h2 id="location"></h2>
-            <p id="location-weather"></p>
+        <div class="weather-container">
+            <div class="weather-input">
+                <input type="text" class="form-control form-control-lg">
+                <button class="btn btn-primary">Find</button>
+            </div>
+            <div class="weather-info">
+                <div class="condition-container">
+                    <div class="temp-container">
+                        <h1 id="temp"></h1>
+                    </div>
+                    <div class="condition">
+                        <h3 id="weather-condition"></h3>
+                        <img id="weather-icon" src="" alt="">
+                    </div>
+                </div>
+                <p class="in hidden">in</p>
+                <div class="location-container">
+                    <h2 id="weather-location__city"></h2>
+                    <h3 id="weather-location__country"></h3>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 </html>
